# hw2p1

./: CMakeCache.txt  CMakeLists.txt  Makefile  auto-bridges-mpi16  auto-bridges-openmp16  auto-bridges-serial  auto-particle-mpi.stdout  auto-particle-openmp16.stdout  auto-particle-serial.stdout  autograder  autograder.cpp  bucket.cpp  cmake_install.cmake  common.cpp  common.h  do_serial.h  full-auto  mpi  mpi.cpp  mpi_old.cpp  mpi_sum.txt  openmp  openmp.cpp  openmp_sum.txt  pthreads  serial  serial.cpp  serial_sum.txt
